# mobile-broadband-provider-info

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  CONTRIBUTING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.svn  apns-conf.xsl  authors.svn2cl  autogen.sh  configure.ac  generate_cl.sh  meson.build  mobile-broadband-provider-info.doap  mobile-broadband-provider-info.pc.in  serviceproviders.2.dtd  serviceproviders.dtd  serviceproviders.xml
